# End-Cue-Point-Detection-and-Ad-Recommendation

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: streamlit_app.py
configs/: bq_creds.example.json  config.yaml
configs/prompts/: ad_recommendation.txt  outro_detection.txt
docs/: README.md
scripts/: eval_outro.py
src/brahma/: __init__.py  config.py  exceptions.py  models.py  prompts.py
src/brahma/agent/: __init__.py  orchestrator.py
src/brahma/clients/: __init__.py  gemini.py
src/brahma/features/: __init__.py  base.py  collector.py  weather_feature.py
src/brahma/recommender/: __init__.py  recommender.py
src/brahma/services/: __init__.py  compositor.py  media_utils.py  outro_detection.py  weather_api.py
tests/: conftest.py  test_compositor.py  test_features_and_orchestrator.py  test_gemini_client.py  test_media_utils.py  test_outro_and_config.py  test_outro_detection_logic.py  test_recommender.py  test_weather.py
